<resources>
    <string name="app_name">kalimasadaapp</string>
    <string name="title_activity_utama">utama</string>
    <string name="title_home">Beranda</string>
    <string name="title_pesanan">Pesanan</string>
    <string name="title_notifications">Notifikasi</string>
    <string name="title_favorite">Disukai</string>
    <string name="title_account">akun</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
